--- a/manifest.json
+++ b/manifest.json
@@ -1,53 +1,35 @@
 {
   "manifest_version": 3,
-  "name": "<name in manifest.json>",
-  "description": "<description in manifest.json>",
-  "options_ui": {
-    "page": "src/pages/options/index.html"
-  },
-  "background": {
-    "service_worker": "src/pages/background/index.ts",
-    "type": "module"
-  },
-  "action": {
-    "default_popup": "src/pages/popup/index.html",
-    "default_icon": {
-      "32": "icon-32.png"
-    }
-  },
-  "chrome_url_overrides": {
-    "newtab": "src/pages/newtab/index.html"
-  },
+  "name": "Attheviewbox URL Generator",
+  "description": "Generates URL for Attheviewbox",
+
   "icons": {
     "128": "icon-128.png"
   },
-  "permissions": [
-    "activeTab"
-  ],
+  "permissions": ["storage",
+  "tabs","nativeMessaging"
+],
+  "host_permissions":["https://www.pacsbin.com/*"],
   "content_scripts": [
     {
       "matches": [
-        "http://*/*",
-        "https://*/*",
-        "<all_urls>"
+        "https://www.pacsbin.com/*"
       ],
-      "js": [
-        "src/pages/content/index.tsx"
-      ],
-      "css": [
-        "contentStyle.css"
-      ]
+      "js": ["src/pages/content/index.tsx"]
     }
   ],
-  "devtools_page": "src/pages/devtools/index.html",
+  
   "web_accessible_resources": [
     {
       "resources": [
-        "contentStyle.css",
-        "icon-128.png",
-        "icon-32.png"
+        "src/pages/content/inject.js"
       ],
-      "matches": []
+      "matches": [
+        "https://www.pacsbin.com/*"
+      ]
     }
-  ]
+  ],
+  "externally_connectable": {
+    "ids": ["*"]},
+  "version": "1.0"
 }
