--- a/package.json
+++ b/package.json
@@ -13,8 +13,19 @@
   },
   "type": "module",
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "@cornerstonejs/core": "^1.66.9",
+    "@cornerstonejs/dicom-image-loader": "^1.66.9",
+    "@cornerstonejs/streaming-image-volume-loader": "^1.66.9",
+    "@cornerstonejs/tools": "^1.66.9",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
+    "use-chrome-storage": "^1.3.1",
+    "vite-plugin-top-level-await": "^1.4.1",
+    "vite-plugin-wasm": "^3.3.0",
     "webextension-polyfill": "^0.11.0"
   },
   "devDependencies": {
