--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,10 @@
     "paths": {
       "@src/*": ["src/*"],
       "@assets/*": ["src/assets/*"],
-      "@pages/*": ["src/pages/*"]
+      "@pages/*": ["src/pages/*"],
+      "@/*": [
+        "./src/*"
+      ]
     }
   },
   "include": ["src",
