--- a/package.json
+++ b/package.json
@@ -17,13 +17,27 @@
     "@cornerstonejs/dicom-image-loader": "^1.66.9",
     "@cornerstonejs/streaming-image-volume-loader": "^1.66.9",
     "@cornerstonejs/tools": "^1.66.9",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-slider": "^1.1.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dynamic-react-grid": "^0.2.0",
+    "lucide-react": "^0.379.0",
+    "rc-slider": "^10.6.2",
+    "rc-tooltip": "^6.2.0",
     "react": "^18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
+    "react-modern-drawer": "^1.3.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "use-chrome-storage": "^1.3.1",
+    "vaul": "^0.9.1",
     "vite-plugin-top-level-await": "^1.4.1",
     "vite-plugin-wasm": "^3.3.0",
     "webextension-polyfill": "^0.11.0"
