--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "buffer": "^6.0.3",
+    "Buffer": "^0.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dynamic-react-grid": "^0.2.0",
