--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
   "icons": {
     "128": "icon.png"
   },
-  "permissions": ["storage","nativeMessaging"
+  "permissions": ["storage"
 ],
   "host_permissions":["https://www.pacsbin.com/c/*"],
   "content_scripts": [
@@ -25,6 +25,7 @@
       ],
       "matches": [
         "https://www.pacsbin.com/*"
+        
       ]
     }
   ],
