--- a/manifest.json
+++ b/manifest.json
@@ -16,12 +16,12 @@
   "content_scripts": [
     {
       "matches": [
-        "https://www.pacsbin.com/c/*"
+        "https://www.pacsbin.com/*"
       ],
       "js": ["src/pages/content/index.tsx"]
+   
     }
   ],
-  
   "web_accessible_resources": [
     {
       "resources": [
@@ -30,7 +30,8 @@
       "matches": [
         "https://www.pacsbin.com/*"
         
-      ]
+      ],
+      "use_dynamic_url": false
     }
   ],
   "externally_connectable": {
