--- a/manifest.json
+++ b/manifest.json
@@ -22,6 +22,9 @@
    
     }
   ],
+  "content_security_policy": {
+    "extension_pages": "script-src 'self' 'wasm-unsafe-eval'; object-src 'self'; "
+  },
   "web_accessible_resources": [
     {
       "resources": [
@@ -34,6 +37,7 @@
       "use_dynamic_url": false
     }
   ],
+  
   "externally_connectable": {
     "ids": ["*"]},
   "version": "1.1"
