--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@supabase/supabase-js": "^2.49.4",
     "buffer": "^6.0.3",
     "Buffer": "^0.0.0",
     "class-variance-authority": "^0.7.0",
